/*******************************************************************************
 * RSO
 * Service for Data Server - Data Server communication.
 ******************************************************************************/
include "DataTypes.thrift"
namespace * rso.at

// Service provided by a Data Server to a Data Server.
service DataDataService 
{

}
